--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Minha Escola</title>
 </head>
 <body>
 
-    <script src="script.js">  </script>
+  <h1>Minha Escola</h1>
+
+  <h2>Sobre</h2>
+  <p>Bem-vindo ao site da nossa escola.</p>
+
+  <h2>Cursos</h2>
+  <p>Temos várias opções de cursos para os alunos.</p>
+
+  <h2>Contato</h2>
+  <p>Email: escola@exemplo.com</p>
+
+  <p>© 2025 Minha Escola</p>
+
 </body>
 </html>
