--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <main>
     <section id="sobre">
-      <h2>Sobre a Escola</h2>
+      <h2>Sobre a Minha Escola</h2>
       <p>O Colégio Estadual Governador Adolpho de Oliveira Franco está localizado em Astorga, Paraná. A escola oferece ensino de qualidade e promove a formação integral dos alunos.</p>
       <p>Diretor(a): <strong>Marli de Marco</strong></p>
       <p>O sistema de consulta de escolas do estado do Paraná confirma o registro da escola em Astorga.</p>
@@ -31,7 +31,7 @@
     <section id="fotos">
       <h2>Fotos da Escola</h2>
       <div class="galeria">
-        <img src="exibirFoto.jpg" alt="Pátio coberto da escola">
+        <img src="exibirFoto.jpg" alt="Pátio coberto da escola(coreto)">
         <img src="exibirFoto (1).jpg" alt="Segunda imagem da escola">
       </div>
     </section>
@@ -48,7 +48,7 @@
           
           <!-- Destaque das matérias do curso Técnico -->
           <div class="curso-detalhe">
-            <h5>Matérias do curso:</h5>
+            <h5>Matérias dos Cursos</h5>
             <div class="materias-cards">
               <div class="materia-card">Programação Mobile</div>
               <div class="materia-card">Banco de Dados</div>
