--- a/index.html
+++ b/index.html
@@ -108,6 +108,45 @@
     </section>
     
     
+        <div class="acessibilidade" role="toolbar" aria-label="Opções de acessibilidade">
+          <button id="increase-font" aria-label="Aumentar tamanho da fonte">A+</button>
+          <button id="decrease-font" aria-label="Diminuir tamanho da fonte">A-</button>
+          <button id="toggle-contrast" aria-label="Ativar alto contraste">🎨 Contraste</button>
+          <button id="toggle-dark" aria-label="Alternar entre modo claro e escuro">🌙 Escuro</button>
+        </div>
+
+
+<script>
+  // Controle de fonte
+  let fontSize = 100;
+  document.getElementById('increase-font').addEventListener('click', () => {
+    fontSize += 10;
+    document.body.style.fontSize = fontSize + '%';
+  });
+  document.getElementById('decrease-font').addEventListener('click', () => {
+    fontSize = Math.max(80, fontSize - 10);
+    document.body.style.fontSize = fontSize + '%';
+  });
+
+  // Modo escuro
+  const darkBtn = document.getElementById('toggle-dark');
+  darkBtn.addEventListener('click', () => {
+    document.body.classList.toggle('dark-mode');
+    darkBtn.textContent = document.body.classList.contains('dark-mode') ? "☀️ Claro" : "🌙 Escuro";
+  });
+
+  // Alto contraste
+  const contrastBtn = document.getElementById('toggle-contrast');
+  contrastBtn.addEventListener('click', () => {
+    document.body.classList.toggle('high-contrast');
+  });
+
+  // Detecta preferência do sistema
+  if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+    document.body.classList.add('dark-mode');
+    darkBtn.textContent = "☀️ Claro";
+  }
+</script>
 
     <section id="contato">
       <h2>Informações de Contato</h2>
